--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -26,7 +26,7 @@ Refer to the guide <<SettingUp#, here>>.
 === Architecture
 
 .Architecture Diagram
-image::ArchitectureDiagram.png[]
+image::ArchitectureDiagram.png[Architecture, 250, 250]
 
 The *_Architecture Diagram_* given above explains the high-level design of the App. Given below is a quick overview of each component.
 
@@ -34,7 +34,7 @@ The *_Architecture Diagram_* given above explains the high-level design of the A
 The `.puml` files used to create diagrams in this document can be found in the link:{repoURL}/docs/diagrams/[diagrams] folder.
 Refer to the <<UsingPlantUml#, Using PlantUML guide>> to learn how to create and edit diagrams.
 
-`Main` has two classes called link:{repoURL}/src/main/java/seedu/address/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/address/MainApp.java[`MainApp`]. It is responsible for,
+`Main` has two classes called link:{repoURL}/src/main/java/seedu/eatme/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/eatme/MainApp.java[`MainApp`]. It is responsible for,
 
 * At app launch: Initializes the components in the correct sequence, and connects them up with each other.
 * At shut down: Shuts down the components and invokes cleanup method where necessary.
@@ -67,21 +67,22 @@ image::LogicClassDiagram.png[]
 The _Sequence Diagram_ below shows how the components interact with each other for the scenario where the user issues the command `delete 1`.
 
 .Component interactions for `delete 1` command
-image::ArchitectureSequenceDiagram.png[]
+image::ArchitectureSequenceDiagram.png[Delete, 500, 500]
 
 The sections below give more details of each component.
 
+// tag::generalDiagrams1[]
 [[Design-Ui]]
 === UI component
 
 .Structure of the UI Component
 image::UiClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/ui/Ui.java[`Ui.java`]
+*API* : link:{repoURL}/src/main/java/seedu/eatme/ui/Ui.java[`Ui.java`]
 
 The UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `EateryListPanel`, `StatusBarFooter` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
 
-The `UI` component uses JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the link:{repoURL}/src/main/java/seedu/address/ui/MainWindow.java[`MainWindow`] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[`MainWindow.fxml`]
+The `UI` component uses JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the link:{repoURL}/src/main/java/seedu/eatme/ui/MainWindow.java[`MainWindow`] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[`MainWindow.fxml`]
 
 The `UI` component,
 
@@ -96,7 +97,7 @@ The `UI` component,
 image::LogicClassDiagram.png[]
 
 *API* :
-link:{repoURL}/src/main/java/seedu/address/logic/Logic.java[`Logic.java`]
+link:{repoURL}/src/main/java/seedu/eatme/logic/Logic.java[`Logic.java`]
 
 .  `Logic` uses the `EatMeParser` class to parse the user command.
 .  This results in a `Command` object which is executed by the `LogicManager`.
@@ -104,20 +105,23 @@ link:{repoURL}/src/main/java/seedu/address/logic/Logic.java[`Logic.java`]
 .  The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`.
 .  In addition, the `CommandResult` object can also instruct the `Ui` to perform certain actions, such as displaying help to the user.
 
+// end::generalDiagrams1[]
+
 Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("delete 1")` API call.
 
 .Interactions Inside the Logic Component for the `delete 1` Command
-image::ArchitectureSequenceDiagram.png[]
+image::ArchitectureSequenceDiagram.png[Delete, 500, 500]
 
 NOTE: The lifeline for `DeleteCommandParser` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
 
+// tag::generalDiagrams2[]
 [[Design-Model]]
 === Model component
 
 .Structure of the Model Component
 image::ModelClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/model/Model.java[`Model.java`]
+*API* : link:{repoURL}/src/main/java/seedu/eatme/model/Model.java[`Model.java`]
 
 The `Model`,
 
@@ -132,27 +136,28 @@ The `Model`,
 === Storage component
 
 .Structure of the Storage Component
-image::StorageClassDiagram.png[]
+image::StorageClassDiagram.png[Storage, 400, 400]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/storage/Storage.java[`Storage.java`]
+*API* : link:{repoURL}/src/main/java/seedu/eatme/storage/Storage.java[`Storage.java`]
 
 The `Storage` component,
 
 * can save `UserPref` objects in json format and read it back.
 * can save `EateryList` data in json format and read it back.
 * can save `FeedList` data in json format and read it back.
+// end::generalDiagrams2[]
 
 [[Design-Commons]]
 === Common classes
 
-Classes used by multiple components are in the `seedu.addressbook.commons` package.
+Classes used by multiple components are in the `seedu.eatme.commons` package.
 
 == Implementation
 
 This section describes some noteworthy details on how certain features are implemented.
 
 // tag::add[]
-=== Add Eatery feature : `add`
+=== Add Eatery feature
 ==== Implementation
 
 The add feature allows the user to add an eatery with the compulsory fields: `Name`, `Address`, and `Category`. The `Tag` field(s), however, is an optional field. The user can add tag(s) to the eatery later on using the `addtag` feature, if needed. The add mechanism is facilitated by `EateryList`. It implements the following operations:
@@ -180,10 +185,12 @@ Step 5. `AddCommand` calls `Model#hasEatery` to check if the eatery already exis
 Step 6. After successfully adding the eatery into `EateryList`, `AddCommand` will return the `CommandResult` to the `Ui`.
 
 The following sequence diagram shows how the add eatery feature is executed.
+
 image:AddSequenceDiagram.png[]
 
 The following sequence diagram shows the reference sequence diagram for creating `Eatery e`.
-image:AddCreateSequenceDiagram.png[]
+
+image:AddCreateSequenceDiagram.png[AddCreate, 500, 500]
 
 ==== Design Considerations
 ===== Aspect: How Add executes
@@ -191,14 +198,16 @@ image:AddCreateSequenceDiagram.png[]
 ** Pros:
 *** Easily implemented.
 *** More user-friendly as users would most likely want to delete or add new tags.
-** Cons: Does not follow the logic of the original Address Book 3 application. More code needs to be refactored.
+** Cons: Does not follow the logic of the original Address Book 3 application. Hence, more code needs to be refactored.
 
 * **Alternative 2:** Making Tag field final.
 ** Pros: Follows the logic of the original Address Book 3 application; don't need to refactor more code.
 ** Cons: Not as user-friendly.
-// end ::add[]
+// end::add[]
 
 // tag::edit[]
+=== Edit Eatery feature
+==== Implementation
 The edit feature allows the user to edit any fields from the selected eatery i.e. `Name`, `Address`, `Category`, and `Tag` field(s). This feature would replace existing `Name`, `Address`, `Category`, and `Tag` associated with the eatery, with the new ones inputted by the user. Hence, this feature is not advised for users who wants to add more tags to the current list of tags. The edit mechanism is facilitated by `EateryList`. It implements the following operations:
 
 * `EateryList#setEatery()` -- Replaces an eatery with another eatery in the `EateryList`.
@@ -222,30 +231,32 @@ Step 6. If the newly created `Eatery` is not a duplicate of the existing `Eatery
 Step 7. After successfully editing the eatery, `EditCommand` will return the `CommandResult` to the `Ui`.
 
 The following sequence diagram shows how the edit eatery feature is executed.
+
 image:EditSequenceDiagram.png[]
 
 The following sequence diagram shows the reference sequence diagram for creating an `EditEateryDescriptor e`.
-image:EditEateryDescriptorSequenceDiagram.png[]
+
+image:EditEateryDescriptorSequenceDiagram.png[EditEateryDescriptor, 400, 400]
 
 The reference sequence diagram for creating `Eatery edited` has been omitted as the steps are the same as the reference sequence diagram for `add` command above.
 
 ==== Design Considerations
-===== Aspect: Replace or add on to eatery's list of tags
+===== Aspect: Replace or directly manipulating the eatery's list of tags
 * **Alternative 1 (current choice):** Replace the entire list of tags
 ** Pros:
 *** Easy to implement.
 *** More user-friendly -- command makes more sense to the user.
-** Cons: Need to create additional command to handle adding of tags to the current list of tags.
+** Cons: Need to create additional commands to handle explicit manipulation of tags (i.e. `addtag` and `removetag` commands to the current list of tags.
 
-* **Alternative 2:** Adding to the list of tags
+* **Alternative 2:** Manipulating to the list of tags
 ** Pros:
 *** Easy to implement.
-*** Don't need to create an additional command to add tags.
-** Cons: Not as user-friendly.
+*** Don't need to create an additional commands to manipulate tags.
+** Cons: Not as user-friendly -- might need to specify more argument parameters to handle manipulation of tags (e.g. `\at [tags]` to add tags and `\rt [tags]` to remove existing tags).
 // end::edit[]
 
-// tag:stats[]
-=== Statistics feature : `stats`
+// tag::stats[]
+=== Statistics feature
 ==== Implementation
 
 The stats feature allows the user to generate statistics about the eateries they have visited and reviews they have made at those visited eateries.
@@ -289,7 +300,8 @@ image:StatsUiSequenceDiagram.png[]
 *** Pros: User would not need to call `stats` command after every addition or change made to the eatery or reviews of an eatery.
 *** Cons: Need to refactor a lot of existing code.
 
-Reason for choosing alternative 1: Although it may be annoying for the user to keep calling `stats` command after every change made, we realise that since `stats` acts as a statistics report for the users, users may not call the `stats` command as often to justify refactoring the entire code. Furthermore, to make a change to the eatery or reviews, the user would still need to minimize `StatsWindow` and unminimize it to view the auto-updated changes. Hence, the number of steps the user would need to execute to see the change in statistics is the same even for both auto-update and without auto-update.
+More detailed explanation for choosing *alternative 1*: Although it may be annoying for the user to keep calling `stats` command after every change made, we realise that since `stats` acts as a statistics report for the users, users may not call the `stats` command as often to justify refactoring the entire code. Furthermore, to make a change to the eatery or reviews, the user would still need to minimize `StatsWindow` and unminimize it to view the auto-updated changes. Hence, the number of steps the user would need to execute to see the change in statistics is the same even for both auto-update and without auto-update.
+// end::stats[]
 
 // tag::revieweatery[]
 === Review Eatery feature
