--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -350,6 +350,8 @@ Example:
 // tag::test[]
 === Start test with flashcards : `test`
 
+image::StartTestCommand.png[]
+
 ****
 Starts a test with a deck of flashcards, with the choice of a timed or un-timed test mode, with the duration specified by the user.
 
@@ -380,6 +382,8 @@ Gets the previous card in the test deck.
 
 ==== Quit test: `exit`
 
+image::ExitCommand.png[]
+
 Exits the test process when the user is in test mode.
 
 Exams will also terminate automatically upon running out of cards in the test deck.
@@ -389,6 +393,8 @@ Triggers a popup with the results of the test.
 Do note that premature ending of a test will still count towards your Statistics.
 
 ==== Front-Back Cards: `front`, `back`, `correct`, `wrong`
+
+image::FrontBack.png[]
 
 ====
 * Users should look at the question on the front of the card and think of their answer.
@@ -401,6 +407,9 @@ Do note that premature ending of a test will still count towards your Statistics
 ====
 
 ==== Multiple Choice Cards: `<INDEX_OF_CORRECT_ANSWER>`, `front`
+
+image::MCQCard.png[]
+
 ====
 * Upon loading the card, users will be presented with the question and several choices.
 
@@ -410,6 +419,8 @@ Do note that premature ending of a test will still count towards your Statistics
 ====
 
 ==== Java/Javascript Cards: `code`
+image::JsJavaCard.png[]
+
 ====
 * Upon loading the card, users will be presented with a coding question.
 
