--- a/docs/team/hellodommy.adoc
+++ b/docs/team/hellodommy.adoc
@@ -37,9 +37,6 @@ https://nus-cs2103-ay1920s1.github.io/website/admin/project-constraints.html[her
 My role was to build the _Performance_ feature, which encompasses the adding, deleting and viewing of
 events and records.
 
-Note the following symbols and formatting used in this document.
-[horizontal]
-
 include::../DeveloperGuide.adoc[tag=symbol]
 
 == Summary of Contributions
@@ -77,7 +74,7 @@ tags is supported.
 
 * Justification: When there are many athletes in a team, tags are a useful way of remembering certain
 details about a particular athlete. This function enhances the existing tag feature by allowing users with
-certin tags to be filtered out of the general athlete list.
+certain tags to be filtered out of the general athlete list.
 
 * Highlights: This enhancement provides the necessary framework for further types of filtering, such as by
 gender or location.
@@ -146,7 +143,8 @@ They showcase my ability to write documentation targeting end-users._
 
 _[Start of extract from User Guide]_
 
-include::../UserGuide.adoc[tag=performance]
+include::../UserGuide.adoc[tag=performance_addrecord]
+include::../UserGuide.adoc[tag=performance_viewrecord]
 
 _[End of extract from User Guide]_
 
